# vulkan-frames

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: CPM.cmake  ThirdParty.cmake
include/ltb/net/: fd_socket.hpp
include/ltb/utils/: args.hpp  ignore.hpp  read_file.hpp  types.hpp
include/ltb/vlk/: check.hpp  image.hpp  output.hpp  pipeline.hpp  render.hpp  setup.hpp  synchronization.hpp  texture.hpp  vlk.hpp
res/shaders/: CMakeLists.txt  composite.frag  composite.vert  triangle.frag  triangle.vert
src/ltb/: ltb_config.hpp.in
src/ltb/exec/: CMakeLists.txt  basic_triangle_app.cpp  composite_app.cpp  external_triangle_app.cpp  framebuffer_triangle_app.cpp  frames_app.cpp
src/ltb/net/: fd_socket.cpp
src/ltb/utils/: args.cpp
src/ltb/vlk/: image.cpp  output.cpp  pipeline.cpp  setup.cpp  synchronization.cpp  texture.cpp
